--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Filmxane Admin Panel - React",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,24 +11,27 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.0.0",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.6.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.6.0",
-    "react-hook-form": "^7.48.0",
-    "@hookform/resolvers": "^3.3.0",
-    "zod": "^3.22.0",
-    "framer-motion": "^10.16.0",
-    "lucide-react": "^0.292.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.0",
-    "recharts": "^2.8.0",
     "react-dropzone": "^14.2.3",
-    "js-cookie": "^3.0.5",
-    "@types/js-cookie": "^3.0.6"
+    "react-hook-form": "^7.48.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.8.0",
+    "recharts": "^2.8.0",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
