--- a/backend/env.example
+++ b/backend/env.example
@@ -6,8 +6,8 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=password
-DB_DATABASE=filmxane_db
+DB_PASSWORD=postgres
+DB_NAME=filmxane
 
 # Redis Configuration
 REDIS_HOST=localhost
