--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,13 @@
 {
   "name": "filmxane-backend",
   "version": "1.0.0",
-  "description": "Filmxane Backend API - NestJS",
-  "author": "Filmxane Team",
-  "private": true,
-  "license": "MIT",
+  "description": "Backend API for Filmxane - Kurdish Cinema Platform",
+  "main": "src/main.ts",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "dev": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -18,37 +17,49 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/config/database.config.ts",
-    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/config/database.config.ts",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/config/database.config.ts"
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ormconfig.ts",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ormconfig.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ormconfig.ts",
+    "db:reset": "rm -f filmxane.db && npm run start:dev",
+    "db:sync": "npm run migration:run"
   },
+  "keywords": [
+    "kurdish",
+    "cinema",
+    "streaming",
+    "movies",
+    "series",
+    "api"
+  ],
+  "author": "Filmxane Team",
+  "license": "MIT",
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/jwt": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/schedule": "^4.0.0",
-    "@nestjs/swagger": "^7.1.0",
-    "@nestjs/throttler": "^5.0.0",
+    "@nestjs/platform-socket.io": "^10.4.20",
+    "@nestjs/schedule": "^6.0.0",
+    "@nestjs/swagger": "^7.0.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^10.0.0",
-    "@types/multer": "^1.4.7",
-    "aws-sdk": "^2.1450.0",
+    "@nestjs/websockets": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "ioredis": "^5.3.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "redis": "^4.6.8",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.4",
     "sqlite3": "^5.1.7",
-    "stripe": "^13.0.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -57,10 +68,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
@@ -76,21 +90,8 @@
     "tsconfig-paths": "^4.1.0",
     "typescript": "^5.1.3"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
