--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
+    "critters": "^0.0.23",
     "framer-motion": "^10.16.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
