--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"npm run dev:admin\"",
     "dev:frontend": "cd frontend && npm run dev",
-    "dev:backend": "cd backend && npm run start:dev",
+    "dev:backend": "cd backend && npm run dev",
     "dev:admin": "cd admin-panel && npm run dev",
-    "start:dev": "cd backend && npm run start:dev",
+    "start:dev": "cd backend && npm run dev",
     "start:frontend": "cd frontend && npm run dev",
     "build": "npm run build:frontend && npm run build:backend && npm run build:admin",
     "build:frontend": "cd frontend && npm run build",
