--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "migration:run": "typeorm-ts-node-commonjs migration:run -d ormconfig.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ormconfig.ts",
     "db:reset": "rm -f filmxane.db && npm run start:dev",
-    "db:sync": "npm run migration:run"
+    "db:sync": "npm run migration:run",
+    "seed": "ts-node -r tsconfig-paths/register src/seeds/index.ts"
   },
   "keywords": [
     "kurdish",
