feat: Update frontend components and add ESLint configurations
- Updated all frontend pages and components
- Added ESLint configurations for all projects
- Removed unused files (not-found.tsx, MaintenanceMode.tsx)
- Added build fixes and quick fix scripts
- Updated package configurations

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,16 +12,23 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "strictBindCallApply": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "paths": {
       "@/*": ["src/*"],
       "@/config/*": ["src/config/*"],
       "@/modules/*": ["src/modules/*"],
       "@/common/*": ["src/common/*"]
     }
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
