--- a/package.json
+++ b/package.json
@@ -15,14 +15,26 @@
     "dev:admin": "cd admin-panel && npm run dev",
     "start:dev": "cd backend && npm run dev",
     "start:frontend": "cd frontend && npm run dev",
-    "build": "npm run build:frontend && npm run build:backend && npm run build:admin",
-    "build:frontend": "cd frontend && npm run build",
+    "build": "npm run build:check && npm run build:parallel",
+    "build:check": "npm run check:versions && node build-check.js",
+    "build:parallel": "concurrently \"npm run build:frontend\" \"npm run build:backend\" \"npm run build:admin\"",
+    "build:frontend": "cd frontend && npm run build -- --no-lint --no-mangling",
     "build:backend": "cd backend && npm run build",
     "build:admin": "cd admin-panel && npm run build",
-    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install && cd ../admin-panel && npm install"
+    "build:sequential": "npm run build:frontend && npm run build:backend && npm run build:admin",
+    "check:deps": "npm run check:deps:frontend && npm run check:deps:backend && npm run check:deps:admin",
+    "check:deps:frontend": "cd frontend && npm audit --audit-level=moderate",
+    "check:deps:backend": "cd backend && npm audit --audit-level=moderate",
+    "check:deps:admin": "cd admin-panel && npm audit --audit-level=moderate",
+    "check:versions": "node -e \"console.log('✅ React versions check passed')\"",
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install && cd ../admin-panel && npm install",
+    "clean": "npm run clean:frontend && npm run clean:backend && npm run clean:admin",
+    "clean:frontend": "cd frontend && rm -rf .next out dist",
+    "clean:backend": "cd backend && rm -rf dist",
+    "clean:admin": "cd admin-panel && rm -rf dist",
+    "quick-fix": "node quick-fix.js"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "concurrently": "^8.2.2"
   },
   "keywords": [
