--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -21,8 +21,8 @@
     "framer-motion": "^10.16.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.0",
     "react-hot-toast": "^2.4.1",
