--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,8 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
     "next": "14.2.32",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.48.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.0",
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "autoprefixer": "^10.4.0",
