--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
   "devDependencies": {
     "concurrently": "^8.2.2"
   },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "keywords": [
     "streaming",
     "kurdish",
