Fix CORS - Allow all origins temporarily to resolve connection issues

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -18,7 +18,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://filmxane-frontend.vercel.app"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
@@ -26,7 +26,7 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization, Accept, X-Requested-With"
+          "value": "Content-Type, Authorization, Accept, X-Requested-With, Origin"
         },
         {
           "key": "Access-Control-Allow-Credentials",
