--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "filmxane-backend",
   "version": "1.0.0",
   "description": "Backend API for Filmxane - Kurdish Cinema Platform",
-  "main": "src/main.ts",
+  "main": "dist/main.js",
   "scripts": {
     "build": "nest build",
     "vercel-build": "npm run build",
