--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for Filmxane - Kurdish Cinema Platform",
   "main": "src/main.ts",
   "scripts": {
-    "build": "nest build",
+    "build": "tsc",
     "vercel-build": "npm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main.js",
