--- a/backend/package.json
+++ b/backend/package.json
@@ -61,7 +61,9 @@
     "socket.io": "^4.7.4",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.17",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "express": "^4.18.2",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
