--- a/backend/package.json
+++ b/backend/package.json
@@ -63,7 +63,8 @@
     "typeorm": "^0.3.17",
     "uuid": "^11.1.0",
     "express": "^4.18.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -91,8 +92,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^5.1.3"
+    "tsconfig-paths": "^4.1.0"
   },
   "engines": {
     "node": ">=18.0.0",
