--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@vercel/node": "^3.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
