--- a/vercel.json
+++ b/vercel.json
@@ -4,24 +4,24 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/next"
-    },
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/categories",
+      "dest": "/api/categories.ts"
+    },
+    {
+      "src": "/api/videos",
+      "dest": "/api/videos.ts"
+    },
+    {
+      "src": "/api/auth/login",
+      "dest": "/api/auth/login.ts"
+    },
+    {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/newlogo.png",
-      "dest": "/frontend/public/newlogo.png"
-    },
-    {
-      "src": "/site.webmanifest",
-      "dest": "/frontend/public/site.webmanifest"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/(.*)",
