--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
-    "build": "npm run build:frontend",
+    "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd frontend && npm run build",
+    "build:backend": "cd backend && npm run build",
     "start": "cd frontend && npm run start",
     "vercel-build": "npm run build"
   },
