--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for Filmxane - Kurdish Cinema Platform",
   "main": "src/main.ts",
   "scripts": {
-    "build": "nest build --webpack=false",
+    "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "nest start --watch",
