--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,13 @@
   "description": "Backend API for Filmxane - Kurdish Cinema Platform",
   "main": "src/main.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "mkdir -p dist && cp -r src/* dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node -r tsconfig-paths/register dist/main",
+    "start:prod": "node -r ts-node/register -r tsconfig-paths/register dist/main.ts",
     "postinstall": "npm run build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
