--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,8 +15,9 @@
     "skipDefaultLibCheck": true,
     "typeRoots": [],
     "types": [],
-    "strictNullChecks": false,
     "noImplicitAny": false,
+    "strict": false,
+    "strictNullChecks": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": false,
@@ -36,5 +37,13 @@
   "exclude": [
     "node_modules",
     "dist"
-  ]
+  ],
+  "ts-node": {
+    "transpileOnly": true,
+    "skipIgnore": true,
+    "compilerOptions": {
+      "skipLibCheck": true,
+      "strict": false
+    }
+  }
 }
